c/src/test/resources/c/nec_inline_bnc/invalid/ex8.ctrl
<controlFile>
  <sourceFile name="../ex8.c" id="1" />
  <run>
    <startPosition fileId="1" line="2" />
    <wayPoint fileId="1" line="11" >
      <loop iterTimes="3" />
    </wayPoint>
    <endPosition fileId="1" line="16" />
  </run>
</controlFile>